fix on workflow

--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -24,19 +24,19 @@ jobs:
       - name: Minify HTML
         run: |
           mkdir dist
-          for file in $(find . name '*.html'); do
-            html-minifier --collapse-whitespace --remove-comments --minify-css true --minify-js "$file" -o "dist/$file"
+          for file in $(find . -name '*.html'); do
+            html-minifier --collapse-whitespace --remove-comments --minify-css true --minify-js true "$file" -o "dist/$file"
           done
       
       - name: Minify JS
         run: |
-          for file in $(find . name '*.js'); do
+          for file in $(find . -name '*.js'); do
             terser "$file" -o "dist/$file" --compress --mangle
           done
       
       - name: Minify CSS
         run: |
-          for file in $(find . name '*.css'); do
+          for file in $(find . -name '*.css'); do
             cleancss "$file" -o "dist/$file"
           done
       
