fix 3 on workflow

--- a/.github/workflows/minify.yml
+++ b/.github/workflows/minify.yml
@@ -52,8 +52,8 @@ jobs:
             done
           ' sh {} +
       
-      - name: Deploy to Github Pages
+      - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
